--- a/ze/zeinterval_callbacks.cpp.erb
+++ b/ze/zeinterval_callbacks.cpp.erb
@@ -333,20 +333,11 @@ static void zeinterval_<%= dbt_event.name %>_callback(
           save_start(state, hpt_t(hostname, process_id, thread_id), size);
     <% $profiling_apis.add("#{dbt_event.name_prefix}_#{START}") %>
     <% $profiling_apis.add("#{dbt_event.name_prefix}_#{STOP}") %>
-  <% elsif dbt_event.name_striped == "zeMemAllocHost" and dbt_event.stop? %>
+  <% elsif ['zeMemAllocHost','zeMemAllocDevice','zeMemAllocShared'].include?(dbt_event.name_striped) and
+        dbt_event.stop? %>
      if ( zeResult == ZE_RESULT_SUCCESS ) {
           const auto size = retrieve_start<size_t>(state, hpt_t(hostname, process_id, thread_id));
           state->rangeset_memory_host[hp_t(hostname, process_id)][(uintptr_t) pptr_val] = (uintptr_t)pptr_val + size;
-     }
-  <% elsif dbt_event.name_striped == "zeMemAllocDevice" and dbt_event.stop? %>
-     if ( zeResult == ZE_RESULT_SUCCESS ) {
-          const auto size = retrieve_start<size_t>(state, hpt_t(hostname, process_id, thread_id));
-          state->rangeset_memory_device[hp_t(hostname, process_id)][(uintptr_t) pptr_val] = (uintptr_t)pptr_val + size;
-     }
-  <% elsif dbt_event.name_striped == "zeMemAllocShared" and dbt_event.stop? %>
-     if ( zeResult == ZE_RESULT_SUCCESS ) {
-          const auto size = retrieve_start<size_t>(state, hpt_t(hostname, process_id, thread_id));
-          state->rangeset_memory_shared[hp_t(hostname, process_id)][(uintptr_t) pptr_val] = (uintptr_t)pptr_val + size;
      }
   <% elsif dbt_event.name_striped == "zeMemFree" and dbt_event.start? %>
      save_start(state, hpt_t(hostname, process_id, thread_id), ptr);
