--- a/omp/ompinterval_callbacks.cpp.erb
+++ b/omp/ompinterval_callbacks.cpp.erb
@@ -11,13 +11,13 @@ void *init_ompinterval_callbacks_state() {
 }
 
 
-static void create_and_enqueue_host_message_intel(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, const char* name,
+static void create_and_enqueue_host_message_transfer(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, const char* name,
                                             const uint64_t ts, const uint64_t duration, const bool err) {
 
      bt_message *message = create_host_message(hostname, process_id, thread_id, name, ts, duration, err,
                             ompinterval_iter_g->dispatch->host_event_class,
                             ompinterval_self_message_iterator_g,
-                            ompinterval_iter_g->dispatch->stream, BACKEND_OMP_INTEL);
+                            ompinterval_iter_g->dispatch->stream, BACKEND_OMP_TRANSFER);
 
      ompinterval_callbacks_state* state = (ompinterval_callbacks_state*) ompinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
@@ -146,7 +146,7 @@ static void ompinterval_<%= dbt_event.name %>_callback(
         auto it_start = state->host_start.find(hpt_function_name_t(hostname,process_id, thread_id, _name));
         const uint64_t start_g = it_start->second;
         state->host_start.erase(it_start);
-        create_and_enqueue_host_message_intel(hostname.c_str(), process_id, thread_id, _name,
+        create_and_enqueue_host_message_transfer(hostname.c_str(), process_id, thread_id, _name,
                                      start_g, ns_from_origin-start_g, 0);
 
      }
@@ -159,7 +159,7 @@ static void ompinterval_<%= dbt_event.name %>_callback(
         auto it_start = state->host_start.find(hpt_function_name_t(hostname,process_id, thread_id, _name));
         const uint64_t start_g = it_start->second;
         state->host_start.erase(it_start);
-        create_and_enqueue_host_message_intel(hostname.c_str(), process_id, thread_id, _name,
+        create_and_enqueue_host_message_transfer(hostname.c_str(), process_id, thread_id, _name,
                                      start_g, ns_from_origin-start_g, 0);
         if (strcmp(_name,"ompt_target_data_alloc") != 0)
             create_and_enqueue_traffic_message(hostname.c_str(), process_id, thread_id, _name, bytes);
