--- a/ze/zeinterval_callbacks.cpp.erb
+++ b/ze/zeinterval_callbacks.cpp.erb
@@ -1,5 +1,3 @@
-#include <iomanip>
-#include <iostream>
 #include "babeltrace_zeinterval.h"
 #include "zeinterval_callbacks.hpp"
 #include "xprof_utils.hpp"
@@ -13,6 +11,7 @@
 #include <zes_ddi.h>
 #include <zel_tracepoints.h>
 
+#include <iomanip>
 #include <vector>
 #include <algorithm>
 #include <iostream>
@@ -86,7 +85,7 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
      bt_message *message = create_host_message(hostname, process_id, thread_id, name, ts, duration, err,
                             zeinterval_iter_g->dispatch->host_event_class,
                             zeinterval_self_message_iterator_g,
-                            zeinterval_iter_g->dispatch->stream);
+                            zeinterval_iter_g->dispatch->stream, BACKEND_ZE);
 
      zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
@@ -144,7 +143,7 @@ static void create_and_enqueue_traffic_message(const char* hostname, const proce
      bt_message *message = create_traffic_message(hostname, process_id, thread_id, name, size,
                                                   zeinterval_iter_g->dispatch->traffic_event_class,
                                                   zeinterval_self_message_iterator_g,
-                                                  zeinterval_iter_g->dispatch->stream);
+                                                  zeinterval_iter_g->dispatch->stream, BACKEND_ZE);
 
      zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
@@ -190,26 +189,26 @@ void zeinterval_downstream_message_queue_push(struct zeinterval_message_iterator
 
 %>
 
-void remove_memory(zeinterval_callbacks_state* state, hp_t hp, const uintptr_t ptr) {
+size_t remove_memory(zeinterval_callbacks_state* state, hp_t hp, const uintptr_t ptr) {
      auto &rs = state->rangeset_memory_shared[hp];
      auto its = rs.find(ptr);
      if (its != rs.end()) {
           rs.erase(its);
-          return;
+          return its->second - its->first;
      }
      auto &rd = state->rangeset_memory_device[hp];
      auto itd = rd.find(ptr);
      if (itd != rd.end()) {
           rd.erase(itd);
-          return;
+          return itd->second - itd->first;
      }
      auto &rh = state->rangeset_memory_host[hp];
      auto ith = rh.find(ptr);
      if (ith != rh.end()) {
           rh.erase(ith);
-          return;
+          return ith->second - ith->first;
      }
-     return;
+     return 0;
 }
 
 const char* memory_location(zeinterval_callbacks_state* state, hp_t hp, const uintptr_t ptr) {
@@ -308,6 +307,8 @@ static void zeinterval_<%= dbt_event.name %>_callback(
   <% if dbt_event.name_striped == "zeModuleGetGlobalPointer" %>
     <% if dbt_event.start? %>
      save_start(state, hpt_t(hostname, process_id, thread_id), hModule);
+    <% $profiling_apis.add("#{dbt_event.name_prefix}_#{START}") %>
+    <% $profiling_apis.add("#{dbt_event.name_prefix}_#{STOP}") %>
     <% else dbt_event.stop? %>
      if ( zeResult == ZE_RESULT_SUCCESS ) {
           const auto hModule = retrieve_start<ze_module_handle_t>(state, hpt_t(hostname, process_id,thread_id));
@@ -315,39 +316,48 @@ static void zeinterval_<%= dbt_event.name %>_callback(
           state->rangeset_memory_shared[hp_t(hostname, process_id)][(uintptr_t) pptr_val] = (uintptr_t)pptr_val + pSize_val;
      }
     <% end %>
-  <% elsif dbt_event.name_striped == "zeModulelDestroy" and dbt_event.start? %>
+  <% elsif dbt_event.name_striped == "zeModuleDestroy" and dbt_event.start? %>
+    <% $profiling_apis.add("#{dbt_event.name_prefix}_#{START}") %>
+    <% $profiling_apis.add("#{dbt_event.name_prefix}_#{STOP}") %>
      auto& s = state->module_to_module_globals;
      auto it = s.find(hp_module_t(hostname, process_id, hModule));
      if (it != s.end()) {
-          state->rangeset_memory_shared[hp_t(hostname, process_id)].erase(it->second.begin());
+          for (auto &s2: it->second)
+            state->rangeset_memory_shared[hp_t(hostname, process_id)].erase(s2);
           s.erase(it);
      }
+  <% elsif dbt_event.name_striped == "zeModuleCreate" and dbt_event.start? %>
+    <% $profiling_apis.add("#{dbt_event.name_prefix}_#{START}") %>
+    <% $profiling_apis.add("#{dbt_event.name_prefix}_#{STOP}") %>
   <% end %>
 
-  <% if ['zeMemAllocHost','zeMemAllocDevice','zeMemAllocShared'].include?(dbt_event.name_striped) and
-        dbt_event.start? %>
+  <% if ['zeMemAllocHost','zeMemAllocDevice','zeMemAllocShared'].include?(dbt_event.name_striped) and dbt_event.start? %>
           save_start(state, hpt_t(hostname, process_id, thread_id), size);
-  <% elsif dbt_event.name_striped == "zeMemAllocHost" and dbt_event.stop? %>
+    <% $profiling_apis.add("#{dbt_event.name_prefix}_#{START}") %>
+    <% $profiling_apis.add("#{dbt_event.name_prefix}_#{STOP}") %>
+  <% elsif ['zeMemAllocHost','zeMemAllocDevice','zeMemAllocShared'].include?(dbt_event.name_striped) and dbt_event.stop? %>
      if ( zeResult == ZE_RESULT_SUCCESS ) {
           const auto size = retrieve_start<size_t>(state, hpt_t(hostname, process_id, thread_id));
-          state->rangeset_memory_host[hp_t(hostname, process_id)][(uintptr_t) pptr_val] = (uintptr_t)pptr_val + size;
-     }
-  <% elsif dbt_event.name_striped == "zeMemAllocDevice" and dbt_event.stop? %>
-     if ( zeResult == ZE_RESULT_SUCCESS ) {
-          const auto size = retrieve_start<size_t>(state, hpt_t(hostname, process_id, thread_id));
-          state->rangeset_memory_device[hp_t(hostname, process_id)][(uintptr_t) pptr_val] = (uintptr_t)pptr_val + size;
-     }
-  <% elsif dbt_event.name_striped == "zeMemAllocShared" and dbt_event.stop? %>
-     if ( zeResult == ZE_RESULT_SUCCESS ) {
-          const auto size = retrieve_start<size_t>(state, hpt_t(hostname, process_id, thread_id));
-          state->rangeset_memory_shared[hp_t(hostname, process_id)][(uintptr_t) pptr_val] = (uintptr_t)pptr_val + size;
+    <% if dbt_event.name_striped == "zeMemAllocHost" %>
+          auto &s = state->rangeset_memory_host;
+    <% elsif dbt_event.name_striped == "zeMemAllocDevice" %>
+          auto &s = state->rangeset_memory_device;
+    <% elsif dbt_event.name_striped == "zeMemAllocShared" %>
+          auto &s = state->rangeset_memory_shared;
+    <% end %>
+          s[hp_t(hostname, process_id)][(uintptr_t) pptr_val] = (uintptr_t)pptr_val + size;
+          //create_and_enqueue_traffic_message(hostname.c_str(), process_id, thread_id, "<%= dbt_event.name_striped %>", size);
      }
   <% elsif dbt_event.name_striped == "zeMemFree" and dbt_event.start? %>
      save_start(state, hpt_t(hostname, process_id, thread_id), ptr);
+    <% $profiling_apis.add("#{dbt_event.name_prefix}_#{START}") %>
+    <% $profiling_apis.add("#{dbt_event.name_prefix}_#{STOP}") %>
   <% elsif dbt_event.name_striped == "zeMemFree" and dbt_event.stop? %>
      if ( zeResult == ZE_RESULT_SUCCESS ) {
           const auto ptr = retrieve_start<uintptr_t>(state, hpt_t(hostname, process_id, thread_id));
-          remove_memory(state, hp_t(hostname, process_id), ptr);
+          const auto size = remove_memory(state, hp_t(hostname, process_id), ptr);
+          (void) size;
+          //create_and_enqueue_traffic_message(hostname.c_str(), process_id, thread_id, "<%= dbt_event.name_striped %>", size);
      }
   <% end %>
 
@@ -602,6 +612,7 @@ Case B:
    |  | (/_ | | | (_) | \/    | | (_|  |   |  | (_
                         /
   %>
+  //Todo this should check for ZE_RESULT!
   <% if dbt_event.start? and
         dbt_event.name_striped.include?("Memory") and
         dbt_event.fields_name.include?("size") %>
