--- a/ze/zeinterval_callbacks.cpp.erb
+++ b/ze/zeinterval_callbacks.cpp.erb
@@ -91,10 +91,24 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
      state->downstream_message_queue.push(message);
 }
 
+static void create_and_enqueue_host_flow_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, const char* name,
+                                            const uint64_t ts, const uint64_t duration, const bool err, const flow_id_t flow_id) {
+
+     /* Message creation */
+     bt_message *message = create_host_message(hostname, process_id, thread_id, name, ts, duration, err,
+                            zeinterval_iter_g->dispatch->host_flow_event_class,
+                            zeinterval_self_message_iterator_g,
+                            zeinterval_iter_g->dispatch->stream, BACKEND_ZE, flow_id);
+
+     zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
+     state->downstream_message_queue.push(message);
+}
+
 static void create_and_enqueue_device_message(
         const char* hostname, const process_id_t process_id, const thread_id_t thread_id, thapi_device_id device,
         const char* commandname, const char* metadata,
         bool err, const uint64_t globalStart,  const uint64_t globalEnd, const uint64_t lltng_min,
+        const flow_id_t flow_id,
         const clock_lttng_device_t &timestamp_pair_ref,
         const std::unordered_map<hpd_t, ze_device_properties_t> &device_to_properties,
         const std::unordered_map<hpd_t, thapi_device_id> &subdevice_parent) {
@@ -123,13 +137,12 @@ static void create_and_enqueue_device_message(
          if (it2 != device_to_properties.cend())
               device_hash = hash_device(it2->second);
      }
-
      /* Message creation */
      bt_message *message = create_device_message(hostname, process_id, thread_id, device_hash, subdevice_hash,
                                                  commandname, start, delta, err, metadata,
-                                                 zeinterval_iter_g->dispatch->device_event_class,
+                                                 zeinterval_iter_g->dispatch->device_flow_event_class,
                                                  zeinterval_self_message_iterator_g,
-                                                 zeinterval_iter_g->dispatch->stream);
+                                                 zeinterval_iter_g->dispatch->stream, flow_id);
 
      /* Set message */
      zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
@@ -277,12 +290,16 @@ static void zeinterval_<%= dbt_event.name %>_callback(
      int64_t ns_from_origin;
      bt_clock_snapshot_get_ns_from_origin(bt_clock, &ns_from_origin);
     <% if dbt_event.start? %>
-     state->host_start[hpt_function_name_t(hostname,process_id, thread_id, "<%= dbt_event.name_striped %>")] = ns_from_origin;
+     state->host_start[ {hostname,process_id, thread_id, "<%= dbt_event.name_striped %>"} ] = {ns_from_origin, state->flow_id};
     <% elsif dbt_event.stop? %>
-     auto it_start = state->host_start.find(hpt_function_name_t(hostname,process_id, thread_id, "<%= dbt_event.name_striped %>"));
-     const uint64_t start_g = it_start->second;
+     auto it_start = state->host_start.find( { hostname,process_id, thread_id, "<%= dbt_event.name_striped %>"} );
+     const auto& [start_g, flow_id] = it_start->second;
      state->host_start.erase(it_start);
-      <% if dbt_event.fields_name.include?('zeResult') %>
+      <% if $dbt_events_who_signal.include?(dbt_event.name_striped) %>
+     create_and_enqueue_host_flow_message(hostname.c_str(), process_id, thread_id, "<%= dbt_event.name_striped %>",
+                                     start_g, ns_from_origin-start_g, zeResult, flow_id);
+      <% elsif dbt_event.fields_name.include?('zeResult') %>
+     (void) flow_id;
         <%# In level0 1.0-rev-3  only those use `ZE_RESULT_NOT_READY` %>
         <% if dbt_event.name_striped.include?('Synchronize') or dbt_event.name_striped.include?('Query') %>
      create_and_enqueue_host_message(hostname.c_str(), process_id, thread_id, "<%= dbt_event.name_striped %>",
@@ -507,8 +524,10 @@ Case B:
     <% else %>
      const std::string name{"<%= dbt_event.name_striped %>"};
     <% end %>
-     const auto device = state->command_list_to_device[hp_command_list_t(hostname,process_id,hCommandList)];
-     state->command_partial_payload[hpt_t(hostname,process_id,thread_id)] = l_tfnm_m_d_ts_t(hCommandList, name, metadata.str(), device, ns_from_origin);
+     const flow_id_t flow_id = state->flow_id;
+     state->flow_id++;
+     const auto device = state->command_list_to_device[ { hostname,process_id,hCommandList } ];
+     state->command_partial_payload[ { hostname,process_id,thread_id } ] = { hCommandList, name, metadata.str(), device, ns_from_origin, flow_id };
   <% end %>
 
   <%#
@@ -524,13 +543,13 @@ Case B:
      const hpt_t hpt(hostname, process_id, thread_id);
 
      auto it_pp = state->command_partial_payload.find(hpt);
-     // We didn't find the command who initiated this even_profiling,
+     // We didn't find the command who initiated this event_profiling,
      // Best we can do is to bailout
      if (it_pp == state->command_partial_payload.end())
           return;
-     const auto [hCommandList, commandname, metadata, device, lltng_min] = it_pp->second;
+     const auto [hCommandList, commandname, metadata, device, lltng_min, flow_id] = it_pp->second;
      state->command_partial_payload.erase(it_pp);
-     state->command_list_to_events[hp_command_list_t(hostname, process_id, hCommandList)].insert(hEvent);
+     state->command_list_to_events[ { hostname, process_id, hCommandList } ].insert(hEvent);
 
      // Got the timestamp pair referance
      clock_lttng_device_t timestamp_pair_ref;
@@ -543,7 +562,7 @@ Case B:
      auto it = state->event_to_profiling_result.find(hpe);
      if (it == state->event_to_profiling_result.end()){
           //Creeate the payload who will be used by event_profiling_results
-          state->event_payload[hpe] = t_tfnm_m_d_ts_cld_t(thread_id, commandname, metadata, device, lltng_min, timestamp_pair_ref);
+          state->event_payload[hpe] = { thread_id, commandname, metadata, device, lltng_min, timestamp_pair_ref, flow_id };
      } else {
           // Handle the callbacks case, where `event_profiling_results` was called before `event_profiling`.
           const auto& [err, globalStart, globalEnd] = it->second;
@@ -551,7 +570,8 @@ Case B:
           const auto& subdevice_parent = state->subdevice_parent;
           create_and_enqueue_device_message(hostname.c_str(), process_id, thread_id, device,
                                             commandname.c_str(), metadata.c_str(),
-                                            err, globalStart, globalEnd, lltng_min, timestamp_pair_ref,
+                                            err, globalStart, globalEnd, lltng_min, flow_id, 
+                                            timestamp_pair_ref,
                                             device_to_properties, subdevice_parent);
      }
 
@@ -562,15 +582,16 @@ Case B:
 
      auto it = state->event_payload.find(hpe);
      if (it != state->event_payload.end()) {
-          const auto& [thread_id, commandname, metadata, device, lltng_min, timestamp_pair_ref] = it->second;
+          const auto& [thread_id, commandname, metadata, device, lltng_min, timestamp_pair_ref, flow_id] = it->second;
           const auto& device_to_properties = state->device_to_properties;
           const auto& subdevice_parent = state->subdevice_parent;
           create_and_enqueue_device_message(hostname.c_str(), process_id, thread_id, device,
                                             commandname.c_str(), metadata.c_str(),
-                                            err, globalStart, globalEnd, lltng_min, timestamp_pair_ref,
+                                            err, globalStart, globalEnd, lltng_min, flow_id, 
+                                            timestamp_pair_ref,
                                             device_to_properties, subdevice_parent);
      } else {
-          state->event_to_profiling_result[hpe] = event_profiling_result_t(err, globalStart,globalEnd);
+          state->event_to_profiling_result[hpe] = { err, globalStart, globalEnd };
      }
   <% end %>
   <%# Cleanup state for profiling %>
